Revision history for WWW::Mechanize

{{$NEXT}}

1.91      2019-01-10 18:44:33Z
    [ENHANCEMENTS]

    - Don't install Perl::Critic and Perl::Tidy to run user tests (GH#268)
      (Julien Fiegehenn)
    - Remove redundant PodSyntaxTests (GH#265) (Andrew Grangaard)
    - Add test dependency for Perl::Tidy (GH#263) (Julien Fiegehenn)

1.90      2018-11-12 18:02:03Z
    [DOCUMENTATION]
    - Pod fixes (GH#261) (Julien Fiegehenn)
    - Fixed pod error as reported by CPANTS. (GH#264) (Mohammad S Anwar)

    [ENHANCEMENTS]
    - Upgrade to HTML::TreeBuilder version 5 to get support for weak references in
      HTML::Element (GH#251) (Julien Fiegehenn)

1.89      2018-10-18 19:13:34Z
    [ENHANCEMENTS]
    - Add support to find_image() and find_all_images() via 'id'
      and 'class' (GH#242) (Julien Fiegehenn)
    - Pass strict/verbose constructor args to HTML::Form (GH#256) (Julien Fiegehenn)
    - Add ability to clear history and tests for history (GH#259) (mschae94)

1.88      2018-03-23 15:37:25Z
========================================
    [FIXED]
    - tick() now dies if checkbox is not found (GH#248) (Olaf Alders)

    [DOCUMENTATION]
    - Clarify behaviour of submit_form when with_fields is supplied as an arg (GH#247) (Olaf Alders)
    - Document some "Best Practices" (GH#246) (Olaf Alders)
    - Update links in Pod. Suggest LWP::ConsoleLogger rather than LWP::Debug (GH#244) (Olaf Alders)

1.87      2018-02-07 22:04:16Z
========================================
    [FIXED]
    - Fix typo in contributor name (GH#241) (Philippe Bruhat (BooK))
    - Fix link to Michael Schilli's article in Linux magazine (GH#240) (Bernhard Wagner)
    - Fix some section links (GH#238) (Evan Zacks)
    - Override _agent() method. (GH#236) (Сергей Романов)
    - Link to appropriate section of HTML::Form (GH#237) (Evan Zacks)
    - Make version consistent in .pm files (GH#231) (Olaf Alders)

    [ENHANCEMENTS]
    - Return form number in list context. (GH#235) (Сергей Романов)