@@ -1,10 +1,11 @@
 Revision history for WWW::Mechanize
 
 {{$NEXT}}
+    [TESTS]
+    - Add a test for finding a link in a meta refresh tag
 
 1.91      2019-01-10 18:44:33Z
     [ENHANCEMENTS]
-
     - Don't install Perl::Critic and Perl::Tidy to run user tests (GH#268)
       (Julien Fiegehenn)
     - Remove redundant PodSyntaxTests (GH#265) (Andrew Grangaard)
